--- a/ecEmu.html
+++ b/ecEmu.html
@@ -5,9 +5,40 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>ucEmu</title>
 
+
+        <script src="basicType/__cpuAsm.js"></script>
+        <script src="basicType/__define.js"></script>
+        <script src="basicType/_add.js"></script>
+        <script src="basicType/_dec.js"></script>
+        <script src="basicType/_divMod.js"></script>
+        <script src="basicType/_inc.js"></script>
+        <script src="basicType/_mul.js"></script>
+        <script src="basicType/_neg.js"></script>
+        <script src="basicType/_sub.js"></script>
+        <script src="basicType/binAnd.js"></script>
+        <script src="basicType/binNot.js"></script>
+        <script src="basicType/binOr.js"></script>
+        <script src="basicType/binSh.js"></script>
+        <script src="basicType/binXnor.js"></script>
+        <script src="basicType/binXor.js"></script>
+        <script src="basicType/cmpE.js"></script>
+        <script src="basicType/cmpGT.js"></script>
+        <script src="basicType/cmpGTE.js"></script>
+        <script src="basicType/cmpLTE.js"></script>
+        <script src="basicType/cmpNE.js"></script>
+        <script src="basicType/logicAnd.js"></script>
+        <script src="basicType/logicNot.js"></script>
+        <script src="basicType/logicOr.js"></script>
+        <script src="basicType/logicXnor.js"></script>
+        <script src="basicType/logicXor.js"></script>
+        
         <script src="drivers/KeyboardDriver.js"></script>
         <script src="drivers/ScreenDriver.js"></script>
         <script src="drivers/TimerDriver.js"></script>
+        <script src="services/ascii/AsciiTable.js"></script>
+        <script src="services/fonts/Font5x8.js"></script>
+        <script src="services/fonts/Font3x5.js"></script>
+        <script src="services/fonts/Font3x4TwoInOne.js"></script>
         <script src="services/FrameBufferService.js"></script>
         <script src="services/InterpolationService.js"></script>
         <script src="services/KeyboardService.js"></script>
@@ -28,7 +59,7 @@
             var timerTwoMs = 500;
             var sinceStartMsPrev = 0;
             var diffMs;
-            var randomChar;
+            var randomChar = '?';
             var text = "";
 
             function rasterizerDrawTriangle(x1, y1, x2, y2, x3, y3)
@@ -86,6 +117,45 @@
                         slowPos = slow > 0 ? slowPos + 1 : slowPos - 1;
                     }
                     xMode ? fbSet(fastPos, slowPos) : fbSet(slowPos, fastPos);
+                }
+            }
+
+            var fontSize = 0;
+
+            function demo3()
+            {
+                var lineHeight;
+
+                fbSetColor(7);
+                fbClear();
+
+                switch (fontSize) {
+                    case 0:
+                        lineHeight = 5;
+                        break;
+                    case 1:
+                        lineHeight = 6;
+                        break;
+                    case 2:
+                        lineHeight = 9;
+                        break;
+                }
+
+                fbSetColor(0);
+                rasterizerDrawText(0, 0 * lineHeight, ' !"#$%&\'()*+,-./', fontSize);
+                rasterizerDrawText(0, 1 * lineHeight, '0123456789:;<=>?', fontSize);
+                rasterizerDrawText(0, 2 * lineHeight, '@ABCDEFGHIJKLMNO', fontSize)
+                rasterizerDrawText(0, 3 * lineHeight, 'PQRSTUVWXYZ[\\]^_', fontSize);
+                rasterizerDrawText(0, 4 * lineHeight, '`abcdefghjiklmno', fontSize);
+                rasterizerDrawText(0, 5 * lineHeight, 'pqrstuvwxyz{|}~ ', fontSize);
+
+                rasterizerDrawText(0, 7 * lineHeight, 'Hello world! The quick brown', fontSize);
+                rasterizerDrawText(0, 8 * lineHeight, 'fox jumps over the lazy dog.', fontSize);
+
+                timerOne += diffMs;
+                if (timerOne > timerOneMs) {
+                    timerOne = timerOne % timerOneMs;
+                    fontSize = (fontSize + 1) % 3;
                 }
             }
 
@@ -188,7 +258,7 @@
                     state += kbPressed(i) ? "+" : "-";
                 }
                 rasterizerDrawText(0, 20, state);
-                rasterizerDrawChar(0, 30, randomChar);
+                rasterizerDrawText(0, 30, randomChar);
 
                 timerOne += diffMs;
                 if (timerOne > timerOneMs) {
@@ -198,7 +268,7 @@
 
                 timerTwo += diffMs;
                 if (timerTwo > timerTwoMs) {
-                    randomChar = String.fromCharCode(Math.round(String(' ').charCodeAt(0) + Math.random()*26));
+                    randomChar = String.fromCharCode(Math.round(String(' ').charCodeAt(0) + Math.random()*26)) + '';
                     timerTwo = timerTwo % timerTwoMs;
                 }
             }
@@ -213,9 +283,9 @@
                 sinceStartMsPrev = sinceStartMs;
 
                 if (demo === -1) {
-                    demo = randomInt(0, 2);
+                    demo = randomInt(0, 3);
                 }
-
+                demo = 3;
                 switch (demo) {
                     case 0:
                         demo0();
@@ -225,6 +295,9 @@
                         break;
                     case 2:
                         demo2();
+                        break;
+                    case 3:
+                        demo3();
                         break;
                 }
             }
@@ -249,7 +322,7 @@
             function init()
             {
                 kbInit();
-                fbInit(96, 48);
+                fbInit(128, 64);
             }
 
             function loop()
@@ -271,7 +344,7 @@
         </style>
     </head>
 
-    <body onLoad="appRun()" onResize="appResize()">
+    <body ><!-- onLoad="appRun()" onResize="appResize()" -->
         <canvas id="c"></canvas>
         <div id="fps"></div>
     </body>
