--- a/ucEmu/cpuEmulator.html
+++ b/ucEmu/cpuEmulator.html
@@ -14,14 +14,14 @@
         ? cycles   | 0x0R 0xRR            | 00 | add     regOut, regIn0, regIn1        | regOut = regIn0 + regIn1
         ? cycles   | 0x1R 0xRR            | 01 | nand    regOut, regIn0, regIn1        | regOut = regIn0 nand regIn1
         ? cycles   | 0x2R 0xRR            | 02 | sh      regOut, regIn0, regIn1        | regOut = (regIn1>=0) ? (regIn0 > abs(regIn1))
-        ? cycles   | 0x5_ 0xRR            | 03 | jnz     regIn0, regIn1                | if (regIn1!=0) jump to address from regIn0
-        ? cycles   | 0x3R 0xR_            | 04 | copy    regOut, regIn0                | regOut = regIn0
-        ? cycles   | 0x4R 0x__ 0xCC 0xCC  | 05 | imm     regOut, _constans16bit_       | regOut = _constans16bit_
+        ? cycles   | 0x3_ 0xRR            | 03 | jnz     regIn0, regIn1                | if (regIn1!=0) jump to address from regIn0
+        ? cycles   | 0x4R 0xR_            | 04 | copy    regOut, regIn0                | regOut = regIn0
+        ? cycles   | 0x5R 0x__ 0xCC 0xCC  | 05 | imm     regOut, _constans16bit_       | regOut = _constans16bit_
         ? cycles   | 0x6_ 0xR_            | 06 | ld      regIn0                        | regMem = MemoryAt[regIn0]
         ? cycles   | 0x7_ 0xR_            | 07 | st      regIn0                        | MemoryAt[regIn0] = regMem
         -----------+----------------------+----+---------------------------------------+-----------------------------------------------
 
-        Alternative version of last three instructions. It can save lot of space in memory after program compilation.
+        Alternative version of last three OPCODES. It can save lot of space in memory after program compilation.
 
         ...        | ...                  | .. | ...                                   | ...
         ? cycles   | 0x4R 0xCC 0xCC       | 05 | imm     regOut, _constant16bit_       | regOut = _constant16bit_
@@ -95,7 +95,7 @@
             NAND: 0x03
         };
 
-        this.INSTRUCTIONS = {
+        this.OPCODES = {
             ADD: {
                 byteWidth: 2
             },
@@ -125,9 +125,9 @@
                 ? cycles   | 0x0R 0xRR            | 00 | add     regOut, regIn0, regIn1        | regOut = regIn0 + regIn1
                 ? cycles   | 0x1R 0xRR            | 01 | nand    regOut, regIn0, regIn1        | regOut = regIn0 nand regIn1
                 ? cycles   | 0x2R 0xRR            | 02 | sh      regOut, regIn0, regIn1        | regOut = (regIn1>=0) ? (regIn0 > abs(regIn1))
-                ? cycles   | 0x5_ 0xRR            | 03 | jnz     regIn0, regIn1                | if (regIn1!=0) jump to address from regIn0
-                ? cycles   | 0x3R 0xR_            | 04 | copy    regOut, regIn0                | regOut = regIn0
-                ? cycles   | 0x4R 0x__ 0xCC 0xCC  | 05 | imm     regOut, _constans16bit_       | regOut = _constans16bit_
+                ? cycles   | 0x3_ 0xRR            | 03 | jnz     regIn0, regIn1                | if (regIn1!=0) jump to address from regIn0
+                ? cycles   | 0x4R 0xR_            | 04 | copy    regOut, regIn0                | regOut = regIn0
+                ? cycles   | 0x5R 0x__ 0xCC 0xCC  | 05 | imm     regOut, _constans16bit_       | regOut = _constans16bit_
                 ? cycles   | 0x6_ 0xR_            | 06 | ld      regIn0                        | regMem = MemoryAt[regIn0]
                 ? cycles   | 0x7_ 0xR_            | 07 | st      regIn0                        | MemoryAt[regIn0] = regMem
             */
@@ -142,7 +142,27 @@
         this.outputs = {
             memoryAddress: 0x0000,
             memoryWrite: 0x00000000,
-            memoryWE: false
+            memoryWE: false,
+
+            portRow00: 0x00000000,
+            portRow01: 0x00000000,
+            portRow02: 0x00000000,
+            portRow03: 0x00000000,
+            portRow04: 0x00000000,
+            portRow05: 0x00000000,
+            portRow06: 0x00000000,
+            portRow07: 0x00000000
+        };
+
+        this.outputPortsRegisters = {
+            regPortRow00: 0xFFFFFFFF & Math.random() * 0x100000000,
+            regPortRow01: 0xFFFFFFFF & Math.random() * 0x100000000,
+            regPortRow02: 0xFFFFFFFF & Math.random() * 0x100000000,
+            regPortRow03: 0xFFFFFFFF & Math.random() * 0x100000000,
+            regPortRow04: 0xFFFFFFFF & Math.random() * 0x100000000,
+            regPortRow05: 0xFFFFFFFF & Math.random() * 0x100000000,
+            regPortRow06: 0xFFFFFFFF & Math.random() * 0x100000000,
+            regPortRow07: 0xFFFFFFFF & Math.random() * 0x100000000
         };
 
         this.registers = {
@@ -150,7 +170,8 @@
             reg00: 0xFFFF & Math.random() * 0x10000,
             reg01: 0xFFFF & Math.random() * 0x10000,
             reg02: 0xFFFF & Math.random() * 0x10000,
-               /* ..03-13.. */
+            reg03: 0xFFFF & Math.random() * 0x10000,
+               /* ..04-13.. */
             regMA: 0xFFFF & Math.random() * 0x10000,
             regPC: 0xFFFF & Math.random() * 0x10000,
 
@@ -160,7 +181,10 @@
 
             // input helper registers
             regReset: Math.random() >= 0.5,
-            regMemory: 0xFFFFFFFF & Math.random() * 0x100000000
+            regMemory: 0xFFFFFFFF & Math.random() * 0x100000000,
+
+            // timer
+            regTimer: 0xFFFFFFFF & Math.random() * 0x100000000
         };
 
         var clockPrevious = null;
@@ -200,17 +224,16 @@
 
         function clockHighToLow()
         {
-            var resetAndBreak = false;
+            var resetOccured = false;
 
             if (_this.registers.regReset) {
                 performRegistersReset();
                 setOutputsAfterReset();
-                resetAndBreak = true;
-                return;
+                resetOccured = true;
             }
 
             _this.registers.regReset = _this.inputs.reset;         // store current input
-            if (resetAndBreak) {
+            if (resetOccured) {
                 return;
             }
 
@@ -221,10 +244,18 @@
                 case _this.REG_SEQ.FETCH_SECOND: 
                     sequenceFetchSecond();
                     break;
-                case _this.REG_SEQ.FETCH_SECOND: 
-                    sequenceFetchSecond();
+                case _this.REG_SEQ.ADD: 
+                    sequenceAdd();
+                    break;
+                case _this.REG_SEQ.NAND: 
+                    sequenceAdd();
+                    break;
+                case _this.REG_SEQ.SH: 
+                    sequenceSh();
                     break;
             }
+
+            // TODO increase timer
         }
 
         function performRegistersReset()
@@ -232,6 +263,7 @@
             _this.registers.reg00 = 0x0000;
             _this.registers.reg01 = 0x0000;
             _this.registers.reg02 = 0x0000;
+            _this.registers.reg03 = 0x0000;
             _this.registers.regMA = 0x0000;
             _this.registers.regPC = 0x0000;
 
@@ -239,6 +271,7 @@
             _this.registers.regInstr = 0x0000;
 
             _this.registers.regMemory = 0x00000000;
+            _this.registers.regTimer = 0x00000000;
 
             // !!! regReset register is excluded from reset !!!
         }
@@ -252,51 +285,271 @@
 
         function sequenceFetchFirst()
         {
+            console.log('sequenceFetchFirst()');
             var addressRow = _this.registers.regPC >>> 2,
                 addressCol = _this.registers.regPC & 0x3,
-                byteShifted = _this.inputs.memoryRead << addressCol;
+                memoryReadShifted = _this.inputs.memoryRead << (addressCol * 3);
 
-            _this.registers.regMemory = byteShifted;
+            _this.registers.regMemory = memoryReadShifted;
             _this.registers.regSeq = _this.REG_SEQ.FETCH_SECOND;
         }
 
         function sequenceFetchSecond()
         {
-            
+            console.log('sequenceFetchSecond()');
+            var addressNext = _this.registers.regPC + 4,
+                addressNextRow = addressNext >>> 2,
+                addressNextCol = addressNext & 0x3,
+                memoryReadShifted = _this.inputs.memoryRead >> ((4 - addressNextCol) * 3),
+                memoryFinal = memoryReadShifted | _this.registers.regMemory,
+                opCode = (memoryFinal & 0xF0000000) >>> (7 * 4),
+                opCodeDetails = getOpCodeDetails(opCode);
+
+            console.log( 'MemoryShift | regMem', memoryReadShifted.toString(16),  _this.registers.regMemory.toString(16));
+
+            _this.registers.regInstr = memoryFinal;
+            console.log(memoryFinal, opCode);
+            _this.registers.regPC += opCodeDetails ? opCodeDetails.byteWidth : 0;
+
+            switch (opCode) {
+                case 0: _this.registers.regSeq = _this.REG_SEQ.ADD; break;
+            }
+
+            /*
+            0x00 0x00 0xaa 0xbb
+            0xcc 0xdd 0x00 0x00
+
+            first
+            0xaa 0xbb ____ ____     << aCol with zero fill
+
+            second
+
+            ____ ____ 0xcc 0xdd     >> 4-aCol width zero fill
+            */
+        }
+
+        function sequenceAdd()
+        {
+            console.log('sequenceAdd()');
+            var regOut = (_this.registers.regInstr & 0x0F000000) >>> (6 * 4),
+                regIn0 = (_this.registers.regInstr & 0x00F00000) >>> (5 * 4),
+                regIn1 = (_this.registers.regInstr & 0x000F0000) >>> (4 * 4),
+                addressRow = _this.registers.regPC >>> 2,
+                addressCol = _this.registers.regPC & 0x3,
+                memoryReadShifted = _this.inputs.memoryRead << addressCol;
+
+            console.log('   == ADD ', regOut, regIn0, regIn1, _this.registers.regInstr.toString(16));
+
+            _this.registers.regMemory = memoryReadShifted;
+            _this.registers.regSeq = _this.REG_SEQ.FETCH_SECOND;
+            saveRegister(regOut, readRegister(regIn0) + readRegister(regIn1));
+            _this.registers.regSeq = _this.REG_SEQ.FETCH_SECOND;
+        }
+
+        function sequenceSh()
+        {
+            console.log('sequenceSh()');
+            var regOut = (_this.registers.regInstr & 0x0F000000) >>> (6 * 4),
+                regIn0 = (_this.registers.regInstr & 0x00F00000) >>> (5 * 4),
+                regIn1 = (_this.registers.regInstr & 0x000F0000) >>> (4 * 4),
+                addressRow = _this.registers.regPC >>> 2,
+                addressCol = _this.registers.regPC & 0x3,
+                memoryReadShifted = _this.inputs.memoryRead << addressCol;
+
+            console.log('   == SH ', regOut, regIn0, regIn1, _this.registers.regInstr.toString(16));
+
+            _this.registers.regMemory = memoryReadShifted;
+            _this.registers.regSeq = _this.REG_SEQ.FETCH_SECOND;
+            saveRegister(regOut, ~(readRegister(regIn0) & readRegister(regIn1)));
+            _this.registers.regSeq = _this.REG_SEQ.FETCH_SECOND;
+        }
+
+        function getOpCodeDetails(opcode) 
+        {
+            switch (opcode) {
+                case 0: return _this.OPCODES.ADD; break;
+                case 1: return _this.OPCODES.NAND; break;
+                case 2: return _this.OPCODES.SH; break;
+                case 3: return _this.OPCODES.JNZ; break;
+                case 4: return _this.OPCODES.COPY; break;
+                case 5: return _this.OPCODES.IMM; break;
+                case 6: return _this.OPCODES.LD; break;
+                case 7: return _this.OPCODES.ST; break;
+            }
+        }
+
+        function readRegister(number) 
+        {
+            switch (number) {
+                case 0: return _this.registers.reg00; break;
+                case 1: return _this.registers.reg01; break;
+                case 2: return _this.registers.reg02; break;
+                case 3: return _this.registers.reg03; break;
+                case 14: return _this.registers.regMA; break;
+                case 15: return _this.registers.regPC; break;
+            }
+
+            throw 'ReadRegister - Bad number: ' + number;
+        }
+
+        function saveRegister(number, value) 
+        {
+            value = 0xFFFF & value;
+            switch (number) {
+                case 0: _this.registers.reg00 = value; break;
+                case 1: _this.registers.reg01 = value; break;
+                case 2: _this.registers.reg02 = value; break;
+                case 3: _this.registers.reg03 = value; break;
+                case 14: _this.registers.regMA = value; break;
+                case 15: _this.registers.regPC = value; break;
+                default: throw 'SaveRegister - Bad number ' + number;
+            }
         }
 
         this.boot();
     };
 
+    var StaticRam = function (address, writeEnable, dataIn) {
+        var _this = this,
+            data = [],
+            inputs = {
+                address: address,
+                writeEnable: writeEnable,
+                dataIn: dataIn
+            };
 
+        this.getRawData = function () {
+            return data;
+        }
+
+        this.getDataOut = function () {
+            return data[inputs.address];
+        }
+
+        this.setWriteEnable = function (writeEnable) {
+            inputs.writeEnable = writeEnable ? true : false;
+            update();
+        };
+
+        this.setAddress = function (address) {
+            inputs.address = address & 0x3FFF;
+            update();
+        };
+
+        this.setDataIn = function (dataIn) {
+            inputs.dataIn = dataIn & 0xFFFFFFFF;
+            update();
+        };
+
+        function update() {
+            if (inputs.writeEnable) {
+                data[inputs.address] = inputs.dataIn;
+
+                console.log('   - data stored at adress ' + inputs.address + ': ' + inputs.dataIn);
+            }
+        }
+
+        function init() {
+            for (var i = 0; i < (64*1024) / 4; i++) {
+                data.push(0xFFFFFFFF & Math.random() * 0x100000000);
+            }
+            update();
+        }
+
+        init();
+    };
+
+    var memoryState = [
+        { address: 0x0000, data: [ 0x01, 0x23, 0x13, 0x22 ] },
+        { address: 0x0004, data: [ 0x02, 0x32, 0x11, 0x22 ] },
+        { address: 0x0008, data: [ 0x00, 0xFF, 0x00, 0xFF ] },
+        { address: 0x000B, data: [ 0xFF, 0x00, 0xFF, 0x00 ] }
+    ];
     var cpu = new Cpu();
-
-    cpu.inputs.reset = true;
-
+    var staticRam = new StaticRam(
+        cpu.outputs.memoryAddress, cpu.outputs.memoryWE, cpu.outputs.memoryWrite
+    );
+    syncCpuWithStaticRam();
 
     console.log('clock: ' + cpu.inputs.clock + ' | ' + JSON.stringify(cpu.registers) + ' | ' + JSON.stringify(cpu.inputs));
+    triggerCpuResetAndProgramStaticRam();    
+    console.log('clock: ' + cpu.inputs.clock + ' | ' + JSON.stringify(cpu.registers) + ' | ' + JSON.stringify(cpu.inputs));
 
-    function runCpu() 
+    function triggerCpuResetAndProgramStaticRam()
     {
-        var clockTicks = 0;
+        console.log(':: trigger RESET AND PROGRAM STARTS');
+        cpu.inputs.reset = true;
 
-        while (clockTicks < 10) {
-            cpu.inputs.clock = true;
-            cpu.update();
-            console.log('clock: ' + cpu.inputs.clock + ' | ' + JSON.stringify(cpu.registers) + ' | ' + JSON.stringify(cpu.inputs));
+        clockHigh();
+        clockLow();
 
-            cpu.inputs.clock = false;
-            cpu.update();
-            console.log('clock: ' + cpu.inputs.clock + ' | ' + JSON.stringify(cpu.registers) + ' | ' + JSON.stringify(cpu.inputs));
+        programStaticRam();
+        syncCpuWithStaticRam();
 
-            console.log('clockTicks ', clockTicks, cpu.registers.regPC);
+        cpu.inputs.reset = false;
+        console.log(':: trigger RESET AND PROGRAM ENDS');
+    }
+
+    function runCpu()
+    {
+        var clockTicks = 0;        
+
+        while (clockTicks < 9) {
+            clockHigh();
+            clockLow();
+
+            console.log('----> clockTicks ', clockTicks, 'regPC', cpu.registers.regPC);
+            console.log('   ');
             clockTicks++;
         }
     }
 
+    function programStaticRam()
+    {
+        staticRam.setWriteEnable(false);
+        for (var i = 0; i < memoryState.length; i++) {
+            var ms = memoryState[i];
+
+            staticRam.setAddress(ms.address);
+            staticRam.setDataIn(
+                0x1000000 * ms.data[0] + 
+                0x10000 * ms.data[1] + 
+                0x100 * ms.data[2] + 
+                ms.data[3]
+            );
+            staticRam.setWriteEnable(true);
+            staticRam.setWriteEnable(false);
+        }
+    }
+
+    function syncCpuWithStaticRam() 
+    {
+        staticRam.setAddress(cpu.outputs.memoryAddress);
+        staticRam.setWriteEnable(cpu.outputs.memoryWE);
+        staticRam.setDataIn(cpu.outputs.memoryWrite);
+
+        cpu.inputs.memoryRead = staticRam.getDataOut();
+    }
+
+    function clockHigh()
+    {
+        cpu.inputs.clock = true;
+        cpu.update();
+        syncCpuWithStaticRam();
+        console.log('clock: ' + cpu.inputs.clock + ' | ' + JSON.stringify(cpu.registers) + ' | ' + JSON.stringify(cpu.inputs));
+    }
+
+    function clockLow()
+    {
+        cpu.inputs.clock = false;
+        cpu.update();
+        syncCpuWithStaticRam();
+        console.log('clock: ' + cpu.inputs.clock + ' | ' + JSON.stringify(cpu.registers) + ' | ' + JSON.stringify(cpu.inputs));
+    }
 
     runCpu();
 
+    console.log(staticRam.getRawData());
 
 })();
 
