--- a/ucEmu/cpuEmulator.html
+++ b/ucEmu/cpuEmulator.html
@@ -93,7 +93,19 @@
             FETCH_SECOND: 0x01,
             ADD: 0x02,
             NAND: 0x03,
-            SH: 0x04
+            SH: 0x04,
+            JNZ: 0x05
+        };
+
+        this.NAMED_REGISTERS = {
+            REG_PC: {
+                number: 15,
+                name: "ProgramCounter"
+            },
+            REG_MA: {
+                number: 14,
+                name: "MemoryAccess"
+            },
         };
 
         this.INSTRUCTIONS = {
@@ -264,6 +276,9 @@
                 case _this.REG_SEQ.SH: 
                     sequenceSh();
                     break;
+                case _this.REG_SEQ.JNZ: 
+                    sequenceJnz();
+                    break;
             }
 
             // TODO increase timer
@@ -297,6 +312,7 @@
                 case _this.REG_SEQ.ADD:
                 case _this.REG_SEQ.NAND:
                 case _this.REG_SEQ.SH:
+                case _this.REG_SEQ.JNZ:
                 // TOOD more
                     _this.outputs.memoryAddress = _this.registers.regPC;
                     break;
@@ -327,7 +343,8 @@
             console.log('    :: sequenceFetchFirst');
             var addressRow = _this.outputs.memoryAddress >>> 2,
                 addressCol = _this.outputs.memoryAddress & 3,
-                memoryReadShifted = _this.inputs.memoryRead << (addressCol * 8);
+                memoryReadShifted = _this.inputs.memoryRead << (addressCol * 8)
+            ;
 
             console.log('    addressRow = ' + dumpHex(addressRow));
             console.log('    addressCol = ' + dumpHex(addressCol));
@@ -349,12 +366,14 @@
                 opInstructionDetails = getInstructionDetails(opCode),
                 instructionByteWidth = opInstructionDetails ? opInstructionDetails.byteWidth : 0,
                 regPCNext = _this.registers.regPC + instructionByteWidth,
-                regSeqNext = 0;
+                regSeqNext = 0
+            ;
 
             switch (opCode) {
                 case _this.INSTRUCTIONS.ADD.opcode: regSeqNext = _this.REG_SEQ.ADD; break;
                 case _this.INSTRUCTIONS.NAND.opcode: regSeqNext = _this.REG_SEQ.NAND; break;
                 case _this.INSTRUCTIONS.SH.opcode: regSeqNext = _this.REG_SEQ.SH; break;
+                case _this.INSTRUCTIONS.JNZ.opcode: regSeqNext = _this.REG_SEQ.JNZ; break;
             }
 
             console.log('    addressRow = ' + dumpHex(addressRow));
@@ -396,7 +415,8 @@
                 regIn1 = (_this.registers.regInstr & 0x000F0000) >>> (4 * 4),
                 regIn0Value = readRegister(regIn0),
                 regIn1Value = readRegister(regIn1),
-                regResult = ((regIn1Value & 0xFFFF) + (regIn0Value & 0xFFFF)) & 0xFFFF;
+                regResult = ((regIn1Value & 0xFFFF) + (regIn0Value & 0xFFFF)) & 0xFFFF
+            ;
 
             console.log('    addressRow = ' + dumpHex(addressRow));
             console.log('    addressCol = ' + dumpHex(addressCol));
@@ -423,7 +443,8 @@
                 regIn1 = (_this.registers.regInstr & 0x000F0000) >>> (4 * 4),
                 regIn0Value = readRegister(regIn0),
                 regIn1Value = readRegister(regIn1),
-                regResult = (~(regIn1Value & regIn0Value)) & 0xFFFF;
+                regResult = (~(regIn1Value & regIn0Value)) & 0xFFFF
+            ;
 
             console.log('    addressRow = ' + dumpHex(addressRow));
             console.log('    addressCol = ' + dumpHex(addressCol));
@@ -453,7 +474,7 @@
                 regResult = regIn1Value & 0x8000 ? 
                     (regIn0Value >>> (((~regIn1Value) + 1) & 0xFFFF)) & 0xFFFF :
                     (regIn0Value << regIn1Value) & 0xFFFF
-                ;
+            ;
 
             console.log('    addressRow = ' + dumpHex(addressRow));
             console.log('    addressCol = ' + dumpHex(addressCol));
@@ -468,6 +489,58 @@
             _this.registers.regSeq = _this.REG_SEQ.FETCH_SECOND;
             saveRegister(regOut, regResult);
         }
+
+        function sequenceJnz()
+        {
+            console.log('    :: sequenceJnz');
+            var regIn0 = (_this.registers.regInstr & 0x00F00000) >>> (5 * 4),
+                regIn1 = (_this.registers.regInstr & 0x000F0000) >>> (4 * 4),
+                regIn0Value = readRegister(regIn0),
+                regIn1Value = readRegister(regIn1),
+                notZeroFlag = regIn1Value !== 0,
+                regPCNext = notZeroFlag ? regIn0Value : _this.registers.regPC
+            ;
+
+            console.log('    regIn0, regIn1 <-> ' + regIn0 + ', ' + regIn1);
+            console.log('    regIn0Value = ' + dumpHex(regIn0Value));
+            console.log('    regIn1Value = ' + dumpHex(regIn1Value));
+            console.log('    notZeroFlag = ' + (notZeroFlag ? "true (regIn1Value NOT EQUAL zero - jump)" : "false (regIn1Value EQUAL zero - no jump)"));
+            console.log('    regPCNext = ' + dumpHex(regPCNext));
+
+            _this.registers.regSeq = _this.REG_SEQ.FETCH_FIRST;
+            saveRegister(_this.NAMED_REGISTERS.REG_PC.number, regPCNext);
+
+            // ? cycles   | 0x3_ 0xRR            | 03 | jnz     regIn0, regIn1                | if (regIn1!=0) jump to address from regIn0
+        }
+
+        function sequenceCopy()
+        {
+            console.log('    :: sequenceCopy');
+
+            // TODO
+            /*
+            var regIn0 = (_this.registers.regInstr & 0x00F00000) >>> (5 * 4),
+                regIn1 = (_this.registers.regInstr & 0x000F0000) >>> (4 * 4),
+                regIn0Value = readRegister(regIn0),
+                regIn1Value = readRegister(regIn1),
+                notZeroFlag = regIn1Value !== 0,
+                regPCNext = notZeroFlag ? regIn0Value : _this.registers.regPC
+            ;
+
+            console.log('    regIn0, regIn1 <-> ' + regIn0 + ', ' + regIn1);
+            console.log('    regIn0Value = ' + dumpHex(regIn0Value));
+            console.log('    regIn1Value = ' + dumpHex(regIn1Value));
+            console.log('    notZeroFlag = ' + (notZeroFlag ? "true (regIn1Value NOT EQUAL zero - jump)" : "false (regIn1Value EQUAL zero - no jump)"));
+            console.log('    regPCNext = ' + dumpHex(regPCNext));
+
+            _this.registers.regSeq = _this.REG_SEQ.FETCH_FIRST;
+            saveRegister(_this.NAMED_REGISTERS.REG_PC.number, regPCNext);            
+            */
+            // ? cycles   | 0x4R 0xR_            | 04 | copy    regOut, regIn0                | regOut = regIn0
+            // ? cycles   | 0x5R 0x__ 0xCC 0xCC  | 05 | imm     regOut, _constans16bit_       | regOut = _constans16bit_
+        }
+
+        
 
         function getInstructionDetails(opcode) 
         {
@@ -580,7 +653,7 @@
 
     var memoryState = [
         { row: 0x0000, data: [ 0xAB, 0xCD, 0xEF, 0x02 ] },
-        { row: 0x0001, data: [ 0x31, 0x56, 0x11, 0x21 ] },
+        { row: 0x0001, data: [ 0x31, 0x56, 0x11, 0x31 ] },
         { row: 0x0002, data: [ 0x23, 0xFF, 0x00, 0xFF ] },
         { row: 0x0003, data: [ 0xEE, 0x00, 0xFF, 0x00 ] }
     ];
@@ -605,14 +678,10 @@
 
 
     cpu.registers.regPC = 7;
-    cpu.registers.reg02 = 0x7;
-    cpu.registers.reg03 = -1;
+    cpu.registers.reg02 = 1;
+    cpu.registers.reg03 = 0;
     globalUpdate();
     runCpu();
-
-
-
-
 
 
     function triggerCpuResetAndProgramStaticRam()
